# pygamewrap

./: 01-add-clouds.py  02-add-enemy.py  02-test-add-enemy.py  03-add-player-movement.py  03-test-add-player-movement.py  04-add-collision-test.py  05-add-shoot-back.py  06-add-score.py  07-add-message.py  08-add-sounds.py  09-add-twist.py  10-add-zigzag-missiles.py  10-zigzag-missiles.py  11-add-sprite-caching.py  12-add-animated-sprite.py  README.md  build-pip.sh  makerequirements.sh  requirements.txt  sandbox-install.sh  sandbox-test.sh
pip-build/: setup.cfg  setup.py
pywrap/: __init__.py  pywrap.py
