[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Michael Moser
author_email = moser.michael@gmail.com
description = pywrap a tool for writing python games with pygame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MoserMichael/pygamewrap
project_urls =
    Bug Tracker = hhttps://github.com/MoserMichael/pygamewrap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
